# dp

./: .gitignore  .gitmodules  README.md  pyproject.toml  queue.sh  train.sh
config/: dataset_config.json  dataset_config_dpo.json  dataset_config_icrt.json  dataset_config_simple.json
config/data_config/icrt_mt/: epi_len_mapping.json  pos_neg.json  verb_to_episode.json
dp/dataset/: dataset.py  icrt_dataset.py  image_dataset.py  image_dataset_sim.py  image_dataset_v2.py  utils.py
dp/policy/: action_head.py  diffusion_wrapper.py  model.py  scale_transformer_diffusion.py  transformer.py  transformer_for_diffusion.py  undo_vision_tf.py  utils.py
dp/policy/vision/: dinov3.py  siglip.py
dp/util/: args.py  config.py  ema.py  engine.py  lerobot_conv_utils.py  lr_sched.py  matrix_utils.py  misc.py  model_constructor.py  transforms.py
script/: check_data.ipynb  convert_data.py  convert_lerobot_to_dp.py  inference.py  train.py  visualize_dataset_randomization.py
scripts/: _serve_policy.py  convert_lerobot_to_dp.py  convert_yumi_zarr_to_lerobot.py  flatten_dataset.py  inference.py  serve_policy.py  train.py  visualize_dataset_randomization.py
scripts/deprecated/: _convert_data.py  calculate_data_statistics.py  check_data.ipynb
test/: check_ckpt.ipynb  convert_dataset_to_mp4.py  convert_dataset_to_zarr.py  profile_dataset.py  test_action_decoder.py  test_dataset.py  test_diffusion_policy.py  test_dino_policy.py  test_fast_tokenizer.ipynb  test_fast_tokenizer.py  test_image_dataset.py  test_simple_policy.py  visualize_data.ipynb
wandb/: latest-run
wandb/run-20250818_234804-360a7hp6/: run-360a7hp6.wandb
wandb/run-20250818_235001-wkp336c0/files/: wandb-metadata.json
wandb/run-20250818_235014-qr9f8q9z/: run-qr9f8q9z.wandb
wandb/run-20250818_235014-qr9f8q9z/files/: config.yaml  wandb-metadata.json
wandb/run-20250818_235122-kv7ut7nz/files/: config.yaml  wandb-metadata.json
wandb/run-20250818_235136-oglprsn7/files/: requirements.txt  wandb-metadata.json
wandb/run-20250818_235146-kzhxv3ww/files/: wandb-metadata.json
wandb/run-20250818_235612-tc38gfrv/files/: wandb-metadata.json
wandb/run-20250818_235646-a36uanap/files/: wandb-metadata.json
wandb/run-20250818_235722-0n9r1nh2/files/: wandb-metadata.json
wandb/run-20250818_235754-csfliu7r/: run-csfliu7r.wandb
wandb/run-20250818_235754-csfliu7r/files/: wandb-metadata.json
wandb/run-20250818_235841-9yyyhh99/files/: wandb-metadata.json
