[project]
name = "dp"
version = "0.1.0"
description = "My personal robot learning train infra code repository"

dependencies=[
    "Pillow",
    "opencv-python",
    "tqdm", 
    "tensorboard",
    "scipy",
    "timm",
    "matplotlib", 
    "tyro", 
    "loralib",
    "h5py",
    "wandb",
    "mediapy",
    "diffusers",
    "lerobot",
    # "kinpy",
    #"torch==2.8.0",
    #"torchvision==0.20.1", 
    #"diffusers==0.18.2", 
    "scikit-image", 
    "scikit-video==1.1.11", 
    "zarr", 
    #"numcodecs==0.10.2", 
    #"pygame==2.1.2", 
    "pymunk", 
    "gym==0.26.2", 
    "shapely",
    "nvidia-dali-cuda120",
    "av",
    "transformers", 
    "s2wrapper@git+https://github.com/bfshi/scaling_on_scales.git", 
    "peft",
    "viser",
    "pandas",
    "datasets==3.6.0",
    "torch==2.8.0",
    "ruff",
    "msgpack_numpy",
    "matplotlib",
]

requires-python= ">=3.10"
[tool.setuptools.packages.find]
include = ["dp"]

[tool.uv.sources]
transformers = { path = "submodules/transformers", editable = true }

[project.urls]
Repository = "https://github.com/uynitsuj/dp"

[tool.flit.module]
name = "dp"

[tool.ruff]
line-length = 119 # Set the max line length to 119 characters.
# keep in alphabetical order
lint.select = [
    "ANN",  # annotations
    "B",  # bugbear rules
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
    "I",  # Import sorting.
    "RUF"  # Ruff rules.
]
# keep in alphabetical/numerical order
lint.ignore = [
    "ANN002",
    "ANN003",
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E402",
    "E501",
    "E741", # Ambiguous variable name. (l, O, or I)
    "F405",
    "F841",
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLR0913",  # Too many arguments.
    "PLR0915",  # Too many statements.
    "PLR1722",
    "PLR2004",  # Magic value used in comparison.
    "PLW0603",  # Global statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
    "RUF001",
    "RUF009"
]
lint.extend-select = ["E501"]
exclude = ["*.ipynb", "submodules/*", "test/*", "scripts/deprecated/*"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.12"
ignore = ["submodules/**", "dp/scripts/**"]

reportMissingImports = "none"
reportAttributeAccessIssue = "none"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
]
omit = [
    "*exceptions.py",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
suppress-dummy-args = true
mypy-init-return = true
allow-star-arg-any = true